syntax = "proto3";

option csharp_namespace = "Bidirectional.Perf.Grpc.Contracts";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  // Sends a files
  rpc SendFile (stream FileRequest) returns (FileReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the file.
message FileRequest {
  string name = 1;
  bytes data = 2;
}

// The response message for a file.
message FileReply {
}
